--- a/cucumber_v2/test-output/index.html
+++ b/cucumber_v2/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\selenium15\cucumber_v2\testng.xml</span>
+                    <span>C:\Users\Neo's HP\git\v2\cucumber_v2\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\selenium15\cucumber_v2\testng.xml</span>
+            <span class="header-content">C:\Users\Neo's HP\git\v2\cucumber_v2\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'featureFileSuites.LoginSuiteRunner')
-data.setCell(0, 3, 122);
+data.setCell(0, 3, 439);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 122 ms</span>
+              <span class="suite-total-time">Total running time: 439 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -227,11 +227,11 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">feature(login feature file)</span>
-                <span class="method-start">275 ms</span>
+                <span class="method-start">331 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">406 ms</span>
+                <span class="method-start">776 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
